ingress/networking.yaml
# SPDX-License-Identifier: Apache-2.0
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zyra-api-ingress
  namespace: zyra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apps-dev.gsd.esrl.noaa.gov
      http:
        paths:
          - path: /zyra/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: zyra-api
                port:
                  number: 80
